# NEMStorageUnderUncertainty

./: .gitignore  LICENSE  Makefile  Manifest.toml  Project.toml  README.md  queue_arbcapcontracted_nodeg.sh  queue_arbdiscounted_nodeg.sh  queue_arbthroughputlimited_nodeg.sh  queue_arbthroughputpenalty_nodeg.sh  queue_standardarb_nodeg.sh
.github/workflows/: CI.yml  Docs.yml
data_scripts/: setup.cfg
data_scripts/NEMSUU_getNEMdata/: get_data.py
dev/: index.html  search_index.js
dev/base_model/: index.html
dev/constraints/: index.html
docs/: make.jl
plotting/: plot_ddm.jl  plot_operation.jl  plot_revenues.jl  plot_revenues_across_lookaheads.jl  plot_revenues_vpi_vpf.jl  plot_standardarb_no_deg_across_lookaheads.jl  plot_throughputs.jl  plot_vpi_vpf.jl  plot_vpl_vpi.jl
price-and-price-error-analyses/: discount-curve-fitting-2021.py  matplotlibrc.mplstyle  price-analysis.py  price-error-characterisation-2021.py  pyproject.toml
price-characterisation/: discount-curve-fitting-2021.py  historical-price-errors.py  matplotlibrc.mplstyle  price-analysis.py  price-error-rugplots-2021.py  pyproject.toml
price-error-analyses/: discount-curve-fitting.py  price_error_analysis.py  pyproject.toml
results/: compile_results.jl  standard_vs_apb_results.jl
simulations/: simulate_actual.jl
src/: NEMStorageUnderUncertainty.jl  data.jl  devices.jl  model.jl  plots.jl  results.jl  simulation_utils.jl  simulations.jl  utils.jl
test/: runtests.jl  test_data.jl  test_model.jl  test_simulations.jl
v0.3/: index.html  search_index.js
v0.4/: index.html
(+132 files in other folders)
