[tool.poetry]
name = "price-characterisation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "price_error_analyses"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
nemosis = "^3.4.0"
nemseer = "^1.0.4"
notebook = "^6.5.3"
matplotlib = "^3.7.1"
pandas = "^1.5.3"
plotly = "^5.14.0"
black = "*"
requests = "^2.28.2"
kaleido = "0.2.0"
seaborn = "^0.12.2"
scipy = "^1.10.1"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
