[tool.poetry]
name = "price-characterisation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "price_error_analyses"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
nemosis = "^3"
nemseer = "^1"
matplotlib = "^3"
pandas = "^1"
plotly = "^5"
requests = "^2"
kaleido = "0.2.0"
seaborn = "^0.12"
scipy = "^1"
polars = "^0.18"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13"
black = "*"
notebook = "^6"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
